# swaggerhub-petstore-bdd

./: pyproject.toml
features/: pet.feature
features/steps/: pet.py
